# rssgram

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: actor.rs  app_state.rs  config.rs  domain.rs  main.rs  repository.rs  telegram.rs  telegram2rss.rs
