[package]
name = "telegram_channel_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
dotenv = "0.15.0"
env_logger = "0.11.5"
envconfig = "0.11.0"
grammers-client = "0.7.0"
grammers-session = "0.7.0"
log = "0.4.22"
nanodb = "0.4.5"
rss = "2.0.9"
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.41.0", features = ["full"] }
